creating user planner
